syntax = "proto3";

option csharp_namespace = "GrpcService";
package productdetails;

// Service definition
service ProductDetailsService {
  rpc GetProductDetails (ProductDetailsRequest) returns (ProductDetailsResponse);
}

// Request message containing the product ID
message ProductDetailsRequest {
  int32 product_id = 1;
}

// Response message containing the product details
message ProductDetailsResponse {
  int32 product_id = 1;
  float price = 2;
  int32 stock = 3;
  float tax_percentage = 4;
}
